<resources>
    <string name="app_name">lab4</string>
    <string name="HELLO">HELLO!</string>
    <string name="HI">Hi!</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="to">To</string>
    <string name="switch_example">Switch example</string>
    <string name="tee">How do you like your tea served?</string>
    <string name="hot">Hot</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>

    <array name="spin" >
        <item > "1"</item>
        <item >"2" </item>
        <item > "3"</item>
        <item > "4"</item>
        <item > "5"</item>
        <item > "6"</item>
    </array>
</resources>